[package]
name = "pg_sgr_from_row"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sgr-team/rs_pg_sgr_from_row"
description = "Write asynchronous code, and synca will create a synchronous version."
readme = "README.md"

[lib]
proc-macro = true

[features]
default = [ "sync" ]
sync = [ ]
tokio = [ ]

[dependencies]
syn = "2.0.23"
quote = "1.0.29"
proc-macro2 = "1.0.69"

[dev-dependencies]
postgres = { version = "0.19.7", features = ["with-serde_json-1"] }
synca = "0.4.0"
tokio = { version = "1.35.1", features = [ "full" ] }
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
